--- a/portal-assignments/09-numpy-assignment-day-1.ipynb
+++ b/portal-assignments/09-numpy-assignment-day-1.ipynb
@@ -55,12 +55,12 @@
       ],
       "metadata": {
         "id": "_BxASjIo6B1X",
-        "outputId": "30b262d4-46af-458d-c69d-3c2e631e4ffa",
+        "outputId": "046e7b54-a05b-4a7e-94bf-8e90e58e7e5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,34 +68,6 @@
           "text": [
             "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
             "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-            "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yqbzsu4R7S_E",
-        "outputId": "30cdd8f5-1873-4993-f8c8-7ab6cd7729f8"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "An array of 10 zeros:\n",
-            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            "An array of 10 ones:\n",
-            "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
-            "An array of 10 fives:\n",
             "[5. 5. 5. 5. 5. 5. 5. 5. 5. 5.]\n"
           ]
         }
@@ -113,33 +85,21 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "print(np.arange(30, 71))"
       ],
       "metadata": {
-        "id": "Rrdz7C556B4Y"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "### sample output"
-      ],
-      "metadata": {
+        "id": "Rrdz7C556B4Y",
+        "outputId": "6c38756b-20c4-4f98-de70-3e0fb8136edf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "S8kKjMd79rrK",
-        "outputId": "a0437049-a596-4a17-90a8-d98e40ce7baf"
+        }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Array of the integers from 30 to70\n",
             "[30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53\n",
             " 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70]\n"
           ]
@@ -158,33 +118,21 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "print(np.arange(10, 50, 2))"
       ],
       "metadata": {
-        "id": "-TwKGj2o6nBV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output\n"
-      ],
-      "metadata": {
+        "id": "-TwKGj2o6nBV",
+        "outputId": "f56a2924-0c6b-4303-d36c-1408805f817d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "qo8PSuCZ99KT",
-        "outputId": "963a4f7b-b9e9-4701-bab1-62d8f824ed67"
+        }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Array of all the even integers from 10 to 50\n",
             "[10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48]\n"
           ]
         }
@@ -202,33 +150,21 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "print(np.identity(3))"
       ],
       "metadata": {
-        "id": "A4oaHF5L6nDB"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "A4oaHF5L6nDB",
+        "outputId": "daa8f5ae-9194-4a88-e060-590a6ac95614",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "Gju3JHbf-PLV",
-        "outputId": "9d66d3e7-6d54-4d20-c386-c12fbcdcf644"
+        }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3x3 matrix:\n",
             "[[1. 0. 0.]\n",
             " [0. 1. 0.]\n",
             " [0. 0. 1.]]\n"
@@ -248,34 +184,22 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "print(np.random.random(1))"
       ],
       "metadata": {
-        "id": "ufPWx-Bo6nFv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "ufPWx-Bo6nFv",
+        "outputId": "84a750ce-1d12-4a94-a464-f30b50beab72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "9PRNc0Pg6nIO",
-        "outputId": "e90f72bd-aba1-43f4-d503-cfbf8af660f1"
+        }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Random number between 0 and 1:\n",
-            "[0.40400053]\n"
+            "[0.08278688]\n"
           ]
         }
       ]
@@ -292,37 +216,28 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "np.random.randn(15)"
       ],
       "metadata": {
-        "id": "tFPEvuTr6nMg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "tFPEvuTr6nMg",
+        "outputId": "29f80ac5-a3cf-40a9-9bb2-52c32302b39b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "DfcnbfwC6B8c",
-        "outputId": "d20e56db-910d-4532-8a84-a867b154f069"
+        }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15 random numbers from a standard normal distribution:\n",
-            "[ 0.68439314  1.50916987 -0.75364839  0.1038106   0.07789927 -0.15349755\n",
-            "  1.78151615  0.49989426  0.18791322 -1.51931266 -0.55512066  2.02808972\n",
-            "  0.37648568  0.57999878 -0.31095957]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-0.41074113, -0.8856741 ,  0.09110561,  0.41904625,  1.23684442,\n",
+              "       -0.62480295,  0.08691984,  0.29946611,  0.72039099,  0.18487761,\n",
+              "        1.01675688,  0.22849799,  0.98152031,  2.11129092, -1.60631912])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -338,38 +253,31 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "array  = np.random.randint(100, size = (3, 4))\n",
+        "\n",
+        "print(array)\n",
+        "\n",
+        "for i in array:\n",
+        "    for j in i:\n",
+        "        print(j, end=' ')"
       ],
       "metadata": {
-        "id": "WyYvr-ly-7y5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "WyYvr-ly-7y5",
+        "outputId": "3b441b90-3702-4b9e-ec4c-b1c8551d77af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "T_oeyAt8_Jv-",
-        "outputId": "dd6207cd-8b15-4d98-fdd8-e109262fec5b"
+        }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original array:\n",
-            "[[10 11 12 13]\n",
-            " [14 15 16 17]\n",
-            " [18 19 20 21]]\n",
-            "Each element of the array is:\n",
-            "10 11 12 13 14 15 16 17 18 19 20 21 "
+            "[[74 57 14 65]\n",
+            " [70 18 10  3]\n",
+            " [50 97 86 49]]\n",
+            "74 57 14 65 70 18 10 3 50 97 86 49 "
           ]
         }
       ]
@@ -386,39 +294,29 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "vec1 = np.array([1, 8, 3, 5])\n",
+        "vec2 = np.array([10, 1, 4, 10])\n",
+        "\n",
+        "vec1 * vec2"
       ],
       "metadata": {
-        "id": "hD8Uk9J0_JxY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "hD8Uk9J0_JxY",
+        "outputId": "1af83f6b-1503-4c87-c337-80a26a161e88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "wVIZTuNW_kZ3",
-        "outputId": "8d259f41-f447-4480-d452-da123a8db61e"
+        }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Vector-1\n",
-            "[1 8 3 5]\n",
-            "Vector-2\n",
-            "[10  1  4 10]\n",
-            "Multiply the values of two said vectors:\n",
-            "[10  8 12 50]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10,  8, 12, 50])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -434,39 +332,27 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "np.array([12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37])[::-1]"
       ],
       "metadata": {
-        "id": "CQZLCU4Z_J0M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "CQZLCU4Z_J0M",
+        "outputId": "37b78806-980f-4ca9-b316-61f4d98228e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "6zOol0u2_J21",
-        "outputId": "b1772711-603d-468e-bdc3-d675873cf5fd"
+        }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Original array:\n",
-            "[12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35\n",
-            " 36 37]\n",
-            "Reverse array:\n",
-            "[37 36 35 34 33 32 31 30 29 28 27 26 25 24 23 22 21 20 19 18 17 16 15 14\n",
-            " 13 12]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21,\n",
+              "       20, 19, 18, 17, 16, 15, 14, 13, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -482,38 +368,30 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "np.arange(1,6) * np.identity(5, dtype= int)"
       ],
       "metadata": {
-        "id": "nJnstERf_J5T"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "nJnstERf_J5T",
+        "outputId": "201e00c8-50c6-47e6-b38f-f10adba13dc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "rOh6nIXl_J78",
-        "outputId": "84736fa7-e5a0-4e8e-c8f2-06005fc5502a"
+        }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[1 0 0 0 0]\n",
-            " [0 2 0 0 0]\n",
-            " [0 0 3 0 0]\n",
-            " [0 0 0 4 0]\n",
-            " [0 0 0 0 5]]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 0, 0, 0, 0],\n",
+              "       [0, 2, 0, 0, 0],\n",
+              "       [0, 0, 3, 0, 0],\n",
+              "       [0, 0, 0, 4, 0],\n",
+              "       [0, 0, 0, 0, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     },
@@ -529,41 +407,35 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "array = np.array([[0, 1], [2, 3]])\n",
+        "\n",
+        "print(f'original array \\n {array}')\n",
+        "print(f'Sum of all elements \\n {array.sum()}')\n",
+        "print(f'Sum of each column: \\n {array.sum(axis = 0)}')\n",
+        "print(f'Sum of each row: \\n {array.sum(axis = 1)}')"
       ],
       "metadata": {
-        "id": "zWHfl9BS_J-a"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "zWHfl9BS_J-a",
+        "outputId": "e339212e-d66f-497c-8cfe-c0539533739e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "CLTx-HRh_KBI",
-        "outputId": "aa907d23-10c0-4b2a-c499-6c1d61b95b0d"
+        }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original array:\n",
-            "[[0 1]\n",
+            "original array \n",
+            " [[0 1]\n",
             " [2 3]]\n",
-            "Sum of all elements:\n",
-            "6\n",
-            "Sum of each column:\n",
-            "[2 4]\n",
-            "Sum of each row:\n",
-            "[1 5]\n"
+            "Sum of all elements \n",
+            " 6\n",
+            "Sum of each column: \n",
+            " [2 4]\n",
+            "Sum of each row: \n",
+            " [1 5]\n"
           ]
         }
       ]
@@ -580,67 +452,32 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here "
+        "vec1 = np.array([4, 5])\n",
+        "vec2 = np.array([7, 10])\n",
+        "\n",
+        "\n",
+        "vec1.dot(vec2)"
       ],
       "metadata": {
-        "id": "cBGxcHxe_KEt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "cBGxcHxe_KEt",
+        "outputId": "b7708688-9cf8-4d9c-d17a-5737246302b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "AvS0_rdDAp-B",
-        "outputId": "aff4e886-3e49-49c6-a9f0-cc3cce2dbc90"
+        }
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Original vectors:\n",
-            "[4 5]\n",
-            "[ 7 10]\n",
-            "Inner product of said vectors:\n",
-            "78\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "78"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "uriWC5FSAp_N"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0uPHZDn8AqB5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "RQ_ORHYjAqGM"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
