assign partially done

--- a/portal-assignments/09-numpy-assignment-day-2.ipynb
+++ b/portal-assignments/09-numpy-assignment-day-2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "09-numpy-assignment-day-2.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -47,44 +46,46 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Z94k4mpaBClu"
-      },
-      "outputs": [],
       "source": [
-        "### code here"
-      ]
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "tzJR5erAeqMO"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
+      "execution_count": 7,
       "metadata": {
+        "id": "Z94k4mpaBClu",
+        "outputId": "a9d405af-24b1-4244-e00b-e5e248657b39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "yAazoe4kBfJ-",
-        "outputId": "2439fd36-9243-49e0-ef2a-f19dca335a17"
+        }
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original array:\n",
-            "[[ 3.  2. nan  1.]\n",
-            " [10. 12. 10.  9.]\n",
-            " [ 5. nan  1. nan]]\n",
-            "\n",
-            "Find the missing data of the said array:\n",
-            "[[False False  True False]\n",
-            " [False False False False]\n",
-            " [False  True False  True]]\n"
+            "Original array: \n",
+            " [[ 3.  6. nan  5.]\n",
+            " [ 4. nan  6.  2.]\n",
+            " [nan  7.  4.  3.]]\n",
+            "missing values: \n",
+            " [[False False  True False]\n",
+            " [False  True False False]\n",
+            " [ True False False False]]\n"
           ]
         }
+      ],
+      "source": [
+        "array = np.array([[3,6, np.nan,5 ],[4,np.nan,6,2], [np.nan,7,4,3]])\n",
+        "\n",
+        "print(f'Original array: \\n {array}')\n",
+        "print(f'missing values: \\n {np.isnan(array)}')"
       ]
     },
     {
@@ -99,13 +100,31 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here "
+        "mat1 = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])\n",
+        "mat2 = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])\n",
+        "\n",
+        "np.array_equal(mat1, mat2)"
       ],
       "metadata": {
-        "id": "0aJczGNjBfL1"
+        "id": "0aJczGNjBfL1",
+        "outputId": "36f0b0bd-60ff-4909-dcb8-ac0712deea58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -522,9 +541,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "n94g4wnlGe2o"
       },
