--- a/portal-assignments/09-numpy-assignment-day-2.ipynb
+++ b/portal-assignments/09-numpy-assignment-day-2.ipynb
@@ -52,15 +52,15 @@
       "metadata": {
         "id": "tzJR5erAeqMO"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "id": "Z94k4mpaBClu",
-        "outputId": "a9d405af-24b1-4244-e00b-e5e248657b39",
+        "outputId": "e72623c6-2d92-44c4-e16e-c7359f053e28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -107,12 +107,12 @@
       ],
       "metadata": {
         "id": "0aJczGNjBfL1",
-        "outputId": "36f0b0bd-60ff-4909-dcb8-ac0712deea58",
+        "outputId": "ef7e6654-72eb-4059-81d4-6efbd875782e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -122,7 +122,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 3
         }
       ]
     },
@@ -138,43 +138,41 @@
     {
       "cell_type": "code",
       "source": [
-        "## code here"
+        "original_array = np.random.randint(0, high= 10, size= (4,4))\n",
+        "\n",
+        "print(f'''Original array:\n",
+        "{original_array}''')\n",
+        "\n",
+        "swapped_array = original_array.copy()\n",
+        "swapped_array[0] = original_array[-1]\n",
+        "swapped_array[-1] = original_array[0]\n",
+        "\n",
+        "print(f'''New array after swapping first and last rows of the said array:\n",
+        "{swapped_array}''')"
       ],
       "metadata": {
-        "id": "3HazIhbtBfOq"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "3HazIhbtBfOq",
+        "outputId": "ae7c099d-9afb-47ee-f12b-ee6d12a3ce73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "FFNk8me9BfRL",
-        "outputId": "10d0f2d3-97b5-4a46-ff16-44136e72c9d9"
+        }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Original array:\n",
-            "[[ 0  1  2  3]\n",
-            " [ 4  5  6  7]\n",
-            " [ 8  9 10 11]\n",
-            " [12 13 14 15]]\n",
-            "\n",
+            "[[7 4 3 3]\n",
+            " [5 0 4 9]\n",
+            " [4 9 1 3]\n",
+            " [7 3 3 3]]\n",
             "New array after swapping first and last rows of the said array:\n",
-            "[[12 13 14 15]\n",
-            " [ 8  9 10 11]\n",
-            " [ 4  5  6  7]\n",
-            " [ 0  1  2  3]]\n"
+            "[[7 3 3 3]\n",
+            " [5 0 4 9]\n",
+            " [4 9 1 3]\n",
+            " [7 4 3 3]]\n"
           ]
         }
       ]
@@ -191,13 +189,54 @@
     {
       "cell_type": "code",
       "source": [
-        "#### code here"
+        "np.array([1,5,2,6,3,7,3])"
       ],
       "metadata": {
-        "id": "Hgmgw7J2BfUQ"
+        "id": "Hgmgw7J2BfUQ",
+        "outputId": "38a2558f-0f30-462a-8c87-d4a0ddf273fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 5, 2, 6, 3, 7, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array((1,5,2,6,3,7,3))"
+      ],
+      "metadata": {
+        "id": "D7DYbNNHPmFk",
+        "outputId": "6ec7a6c3-dda5-414e-c362-3ece25d75f1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 5, 2, 6, 3, 7, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -211,13 +250,33 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "array1 = np.random.randint(0, high= 10, size= (6))\n",
+        "array2 = np.random.randint(0, high= 10, size= (6))\n",
+        "\n",
+        "print(f'array1 ----> {array1}')\n",
+        "print(f'array2 ----> {array2}')\n",
+        "print(f'intersection ----> {np.intersect1d(array1, array2)}')\n",
+        "\n"
       ],
       "metadata": {
-        "id": "1QMJVl3LBfWm"
+        "id": "1QMJVl3LBfWm",
+        "outputId": "7731a2e0-6c57-4d3e-d711-3c14bb2f585b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "array1 ----> [1 9 0 5 9 2]\n",
+            "array2 ----> [0 3 9 2 8 9]\n",
+            "intersection ----> [0 2 9]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -231,39 +290,36 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "original_array = np.random.randint(0, high= 10, size= (3,2))\n",
+        "\n",
+        "print(f'''Reshape 3x2\n",
+        "{original_array}''')\n",
+        "\n",
+        "print(f'''Reshape 2x3\n",
+        "{np.reshape(original_array, newshape=(2, 3))}\n",
+        "''')\n"
       ],
       "metadata": {
-        "id": "rNh8SssUBfZQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "### sample output"
-      ],
-      "metadata": {
+        "id": "rNh8SssUBfZQ",
+        "outputId": "05ceff8d-8c6f-4a05-ada9-877e602ae4e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "1yNEqa9pBfch",
-        "outputId": "2377437d-096d-43cd-ca44-1d00a7db04b3"
+        }
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Reshape 3x2:\n",
-            "[[1 2]\n",
-            " [3 4]\n",
-            " [5 6]]\n",
-            "Reshape 2x3:\n",
-            "[[1 2 3]\n",
-            " [4 5 6]]\n"
+            "Reshape 3x2\n",
+            "[[9 9]\n",
+            " [8 5]\n",
+            " [7 3]]\n",
+            "Reshape 2x3\n",
+            "[[9 9 8]\n",
+            " [5 7 3]]\n",
+            "\n"
           ]
         }
       ]
@@ -280,27 +336,22 @@
     {
       "cell_type": "code",
       "source": [
-        "### code here"
+        "a = np.array([10, 10, 20, 10, 20, 20, 20, 30, 30, 50, 40, 40])\n",
+        "\n",
+        "print(f'''Original array:\n",
+        "{a}''')\n",
+        "unique_elements, counts_elements = np.unique(a, return_counts=True)\n",
+        "print(f'''Frequency of unique values of the said array:\n",
+        "{np.array([unique_elements, counts_elements])}''')\n"
       ],
       "metadata": {
-        "id": "NqJxDKOs6dZN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "## sample output"
-      ],
-      "metadata": {
+        "id": "NqJxDKOs6dZN",
+        "outputId": "c353cac9-4f0e-44aa-f111-2c2b314eeb93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "ElvUfhXV6db6",
-        "outputId": "61b70809-412a-472b-d7ca-c513b54150b5"
+        }
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
