--- a/mahindra-club-pre-processing.ipynb
+++ b/mahindra-club-pre-processing.ipynb
@@ -9,11 +9,11 @@
         "%cd '/content/drive/Shareddrives/Shared Drive/colab-content'"
       ],
       "metadata": {
-        "id": "g1FcNCljNkpW",
-        "outputId": "f5423a48-f1dd-4a97-b4c5-51811abe50b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "g1FcNCljNkpW",
+        "outputId": "f5423a48-f1dd-4a97-b4c5-51811abe50b0"
       },
       "execution_count": 1,
       "outputs": [
@@ -602,12 +602,12 @@
         "data.describe()"
       ],
       "metadata": {
-        "id": "67iwY6aejLvu",
-        "outputId": "7ffde994-98c7-47b0-8e7b-c6c90395b252",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
-        }
+        },
+        "id": "67iwY6aejLvu",
+        "outputId": "7ffde994-98c7-47b0-8e7b-c6c90395b252"
       },
       "execution_count": 4,
       "outputs": [
@@ -941,11 +941,11 @@
         "data.info()"
       ],
       "metadata": {
-        "id": "PSHWAtGhjQcC",
-        "outputId": "340251a8-6c15-4a42-dc3f-eaa9994ba1ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PSHWAtGhjQcC",
+        "outputId": "340251a8-6c15-4a42-dc3f-eaa9994ba1ba"
       },
       "execution_count": 5,
       "outputs": [
@@ -1010,11 +1010,11 @@
         "data.info()"
       ],
       "metadata": {
-        "id": "rO4vB6gMPj04",
-        "outputId": "fdd2a3b5-704a-4fe6-d259-be537ab47ab5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rO4vB6gMPj04",
+        "outputId": "fdd2a3b5-704a-4fe6-d259-be537ab47ab5"
       },
       "execution_count": 8,
       "outputs": [
@@ -1064,6 +1064,269 @@
       ],
       "metadata": {
         "id": "PeCcuL8GP34U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filtered_data"
+      ],
+      "metadata": {
+        "id": "mt7SqUGGRNXh",
+        "outputId": "0e2a6939-940d-4a7d-8128-07417501f00c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 487
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                           reservation_id  persontravellingid  \\\n",
+              "0       07659f3758d8aee27f5a7e2887adeacb67021cb95ada1b...                  46   \n",
+              "1       03930f033646d073462b35d411616323597715ac4fc398...                  46   \n",
+              "2       d145a32920e6587ad95bfe299d80c0affa268220535aaf...                  47   \n",
+              "3       cfd77f44811ed62f25a220b53324cdbafc662a4c9e5f04...                  46   \n",
+              "4       937cff9e4dcfc2459620153dfc8b9962ac22bea67dfb29...                  46   \n",
+              "...                                                   ...                 ...   \n",
+              "341419  a804d59b74b1d532a90740ded80dd05873bbef125bc349...                  47   \n",
+              "341420  7062c92a631731e7189cf3dddb20aceeae91a883e14229...                  45   \n",
+              "341421  18a5668c302c321dc2d42a48923ceff97af633c66d72ee...                  45   \n",
+              "341422  1cbe1611a122023d7e994b4cf51fcf28ce44acdbcabbfb...                  47   \n",
+              "341423  8712dd3ce2e36f2fbcd16b24aa3b89bd1c5203a39e578b...                  45   \n",
+              "\n",
+              "                                                 memberid  \\\n",
+              "0       3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...   \n",
+              "1       3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...   \n",
+              "2       3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...   \n",
+              "3       3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...   \n",
+              "4       3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...   \n",
+              "...                                                   ...   \n",
+              "341419  0095e00c6dae789d37628bd85697e53c423231337994c4...   \n",
+              "341420  42d7b97ad0d345da57a4010157729286418481f3d7ad24...   \n",
+              "341421  f393011a27daf3d1676417f48f44ad9ed3541285e71209...   \n",
+              "341422  b14649c29eb050f4e9b69c7a3afb5dfa00d12dabfd2e40...   \n",
+              "341423  2a3936f649eb6af2167f41fb6f0cc9f352d142125f402f...   \n",
+              "\n",
+              "                                                resort_id  \n",
+              "0       4e07408562bedb8b60ce05c1decfe3ad16b72230967de0...  \n",
+              "1       39fa9ec190eee7b6f4dff1100d6343e10918d044c75eac...  \n",
+              "2       535fa30d7e25dd8a49f1536779734ec8286108d115da50...  \n",
+              "3       d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f...  \n",
+              "4       d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f...  \n",
+              "...                                                   ...  \n",
+              "341419  c6f3ac57944a531490cd39902d0f777715fd005efac9a3...  \n",
+              "341420  c75cb66ae28d8ebc6eded002c28a8ba0d06d3a78c6b5cb...  \n",
+              "341421  4b227777d4dd1fc61c6f884f48641d02b4d121d3fd328c...  \n",
+              "341422  6208ef0f7750c111548cf90b6ea1d0d0a66f6bff40dbef...  \n",
+              "341423  9400f1b21cb527d7fa3d3eabba93557a18ebe7a2ca4e47...  \n",
+              "\n",
+              "[341424 rows x 4 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-2ab54541-b649-49c4-87c6-5b3c8132097b\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>reservation_id</th>\n",
+              "      <th>persontravellingid</th>\n",
+              "      <th>memberid</th>\n",
+              "      <th>resort_id</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>07659f3758d8aee27f5a7e2887adeacb67021cb95ada1b...</td>\n",
+              "      <td>46</td>\n",
+              "      <td>3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...</td>\n",
+              "      <td>4e07408562bedb8b60ce05c1decfe3ad16b72230967de0...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>03930f033646d073462b35d411616323597715ac4fc398...</td>\n",
+              "      <td>46</td>\n",
+              "      <td>3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...</td>\n",
+              "      <td>39fa9ec190eee7b6f4dff1100d6343e10918d044c75eac...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>d145a32920e6587ad95bfe299d80c0affa268220535aaf...</td>\n",
+              "      <td>47</td>\n",
+              "      <td>3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...</td>\n",
+              "      <td>535fa30d7e25dd8a49f1536779734ec8286108d115da50...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>cfd77f44811ed62f25a220b53324cdbafc662a4c9e5f04...</td>\n",
+              "      <td>46</td>\n",
+              "      <td>3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...</td>\n",
+              "      <td>d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>937cff9e4dcfc2459620153dfc8b9962ac22bea67dfb29...</td>\n",
+              "      <td>46</td>\n",
+              "      <td>3d1539e56495b6991f0a3ef5a61ca3d03ce4fff7380e9a...</td>\n",
+              "      <td>d4735e3a265e16eee03f59718b9b5d03019c07d8b6c51f...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341419</th>\n",
+              "      <td>a804d59b74b1d532a90740ded80dd05873bbef125bc349...</td>\n",
+              "      <td>47</td>\n",
+              "      <td>0095e00c6dae789d37628bd85697e53c423231337994c4...</td>\n",
+              "      <td>c6f3ac57944a531490cd39902d0f777715fd005efac9a3...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341420</th>\n",
+              "      <td>7062c92a631731e7189cf3dddb20aceeae91a883e14229...</td>\n",
+              "      <td>45</td>\n",
+              "      <td>42d7b97ad0d345da57a4010157729286418481f3d7ad24...</td>\n",
+              "      <td>c75cb66ae28d8ebc6eded002c28a8ba0d06d3a78c6b5cb...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341421</th>\n",
+              "      <td>18a5668c302c321dc2d42a48923ceff97af633c66d72ee...</td>\n",
+              "      <td>45</td>\n",
+              "      <td>f393011a27daf3d1676417f48f44ad9ed3541285e71209...</td>\n",
+              "      <td>4b227777d4dd1fc61c6f884f48641d02b4d121d3fd328c...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341422</th>\n",
+              "      <td>1cbe1611a122023d7e994b4cf51fcf28ce44acdbcabbfb...</td>\n",
+              "      <td>47</td>\n",
+              "      <td>b14649c29eb050f4e9b69c7a3afb5dfa00d12dabfd2e40...</td>\n",
+              "      <td>6208ef0f7750c111548cf90b6ea1d0d0a66f6bff40dbef...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341423</th>\n",
+              "      <td>8712dd3ce2e36f2fbcd16b24aa3b89bd1c5203a39e578b...</td>\n",
+              "      <td>45</td>\n",
+              "      <td>2a3936f649eb6af2167f41fb6f0cc9f352d142125f402f...</td>\n",
+              "      <td>9400f1b21cb527d7fa3d3eabba93557a18ebe7a2ca4e47...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>341424 rows × 4 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ab54541-b649-49c4-87c6-5b3c8132097b')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-2ab54541-b649-49c4-87c6-5b3c8132097b button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-2ab54541-b649-49c4-87c6-5b3c8132097b');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- reservation_id is unique for each reservation and this does not add any information for regression.\n",
+        "- "
+      ],
+      "metadata": {
+        "id": "y9U9ibv3ROsK"
       }
     }
   ],
