--- a/mahindra-club-pre-processing.ipynb
+++ b/mahindra-club-pre-processing.ipynb
@@ -15,7 +15,7 @@
         "id": "g1FcNCljNkpW",
         "outputId": "006873a1-fe1c-46a6-d5f8-92c0e74c510f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 56,
       "metadata": {
         "id": "lIYdn1woOS1n"
       },
@@ -48,7 +48,11 @@
         "import pandas as pd\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n"
+        "import seaborn as sns\n",
+        "\n",
+        "\n",
+        "import warnings\n",
+        "warnings.simplefilter(\"ignore\")\n"
       ]
     },
     {
@@ -74,7 +78,7 @@
           "height": 487
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,7 +613,7 @@
         "id": "67iwY6aejLvu",
         "outputId": "207d9178-e4c7-4a86-9934-726a3d5aa787"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -947,7 +951,7 @@
         "id": "PSHWAtGhjQcC",
         "outputId": "9e554e83-a003-495c-f189-2f3bd9239faa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,7 +1020,7 @@
         "id": "rO4vB6gMPj04",
         "outputId": "054b8696-a5bb-4dd0-9e4a-13b2b3d07e5c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,7 +1087,7 @@
       "metadata": {
         "id": "mt7SqUGGRNXh"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1107,13 +1111,13 @@
       ],
       "metadata": {
         "id": "eNMfDo5q4ymL",
-        "outputId": "c250cbbb-1024-4510-ea2e-87d198441cc2",
+        "outputId": "40856ba6-0005-44ae-db6e-c11964736767",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
         }
       },
-      "execution_count": 34,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1140,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19\">\n",
+              "  <div id=\"df-2d8d2f39-7879-4471-a7b0-2a056ede4069\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1232,7 +1236,7 @@
               "</table>\n",
               "<p>341424 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d8d2f39-7879-4471-a7b0-2a056ede4069')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1283,12 +1287,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2d8d2f39-7879-4471-a7b0-2a056ede4069 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-80f2aef8-3d20-4fa2-bf0a-c11923a18b19');\n",
+              "          const element = document.querySelector('#df-2d8d2f39-7879-4471-a7b0-2a056ede4069');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1311,7 +1315,234 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There are few intresting things found in the dates\n",
+        "\n",
+        "- There are few places where check in date is after the check out date. This might be an error and we can swap those two cells\n",
+        "- In few cases the booking date is after checkout date "
+      ],
+      "metadata": {
+        "id": "8lWjcMY7d23m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "date_features.loc[date_features['checkin_date'] > date_features['checkout_date']] "
+      ],
+      "metadata": {
+        "id": "mZVSBSofaUw4",
+        "outputId": "e43aa34f-a1d6-4d56-e2ed-baf123f23cee",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        }
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       booking_date checkin_date checkout_date\n",
+              "1        2015-01-23   2015-11-04    2015-04-16\n",
+              "3        2015-02-05   2015-11-06    2015-06-16\n",
+              "5        2015-01-12   2016-12-01    2016-01-13\n",
+              "10       2017-03-02   2017-02-28    2017-01-03\n",
+              "34       2018-03-31   2012-12-03    2012-03-18\n",
+              "...             ...          ...           ...\n",
+              "341406   2019-02-20   2019-02-27    2019-02-03\n",
+              "341417   2019-02-22   2019-02-27    2019-02-03\n",
+              "341419   2019-11-02   2019-02-27    2019-01-03\n",
+              "341420   2019-02-27   2019-02-28    2019-01-03\n",
+              "341422   2019-02-27   2019-02-28    2019-01-03\n",
+              "\n",
+              "[46126 rows x 3 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-94e0cc9a-99ac-4435-bfae-95a5efa58a99\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>booking_date</th>\n",
+              "      <th>checkin_date</th>\n",
+              "      <th>checkout_date</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2015-01-23</td>\n",
+              "      <td>2015-11-04</td>\n",
+              "      <td>2015-04-16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2015-02-05</td>\n",
+              "      <td>2015-11-06</td>\n",
+              "      <td>2015-06-16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>2015-01-12</td>\n",
+              "      <td>2016-12-01</td>\n",
+              "      <td>2016-01-13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>2017-03-02</td>\n",
+              "      <td>2017-02-28</td>\n",
+              "      <td>2017-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>34</th>\n",
+              "      <td>2018-03-31</td>\n",
+              "      <td>2012-12-03</td>\n",
+              "      <td>2012-03-18</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341406</th>\n",
+              "      <td>2019-02-20</td>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341417</th>\n",
+              "      <td>2019-02-22</td>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341419</th>\n",
+              "      <td>2019-11-02</td>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341420</th>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-28</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>341422</th>\n",
+              "      <td>2019-02-27</td>\n",
+              "      <td>2019-02-28</td>\n",
+              "      <td>2019-01-03</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>46126 rows × 3 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-94e0cc9a-99ac-4435-bfae-95a5efa58a99')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-94e0cc9a-99ac-4435-bfae-95a5efa58a99 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-94e0cc9a-99ac-4435-bfae-95a5efa58a99');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
         }
       ]
     }
